js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/constructor.js
assert
.
sameValue
(
TypeError
.
prototype
.
constructor
TypeError
)
;
verifyNotEnumerable
(
TypeError
.
prototype
"
constructor
"
)
;
verifyWritable
(
TypeError
.
prototype
"
constructor
"
)
;
verifyConfigurable
(
TypeError
.
prototype
"
constructor
"
)
;
reportCompare
(
0
0
)
;
